# lite-rtstt

./: .env.secret  .gitignore  Dockerfile  app.py  entrypoint.sh  pyproject.toml  readme.md  requirements.txt
.github/workflow/: deploy.yaml
.github/workflows/: deploy.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
data_structure/: message.py
route/: speech_to_text.py
service/: aws_api_client.py  route.py  silero_pool.py  speechmatics_api_client.py  structure.py  stt_client.py  webrtcvad_client.py  whisper_pool.py
snap/: snapcraft.yaml
src/lite_rtstt/: main.py  service_main.py
src/lite_rtstt/atomic/: counter.py
src/lite_rtstt/network/: route.py
src/lite_rtstt/stt/: audio_buffer.py  audiobuffer.py  config.py  event.py  rtstt_client.py  stt_client.py  vad_client.py
test/: api_client_test.py  audio_provider.py  route_test.py  rtstt_test.py  server_stress_test.py  stt_test.py  utils.py  vad_test.py
test/data/: 21s_f32.pcm  42s_f32.pcm  42s_i16.pcm  7s_2_f32.pcm  7s_f32.pcm  7s_i16.pcm  short_test_data.pcm
